# phantom-wireguard

./: .env.auth-service.example  .env.daemon.example  .gitignore  .gitmodules  .swiftlint.yml  ARCHITECTURE  ARCHITECTURE_TR  CHANGELOG  CONTRIBUTING.md  Cargo.toml  DISTRIBUTION  Dockerfile  FEATURE_IOS_APP.md  FEATURE_IOS_APP_TR.md  LICENSE  Makefile  README.md  README_AR.md  README_TR.md  SECURITY.md  SEMVER.md  SEMVER_TR.md  SETUP  THIRD_PARTY_LICENSES  UPDATE  build.rs  deploy.sh  dev.Dockerfile  docker-compose-dev.yml  docker-compose.yml  fetch_compose_bridge.sh  frontmatter-install.sh  packager.py  phantom-install.sh  project.yml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements-test.in  requirements-test.txt  (+3 more)
.github/: ci-cd.md  external_pull_request_template.md
Phantom-WG/: Info.plist  PhantomApp.swift  SharedConstants.swift  SharedLogger.swift  WstunnelBridge.swift
Phantom-WG-Mac/: Info.plist  Phantom-WG-Mac.entitlements  PhantomApp.swift  PrivacyInfo.xcprivacy  SharedConstants.swift
Phantom-WG-MacOS/: BridgingHeader.h  Phantom-WG-MacOS.entitlements  PhantomApp.swift  WstunnelBridge.swift
PhantomDNSProxy/: Info.plist  PhantomDNSProxy.entitlements
PhantomSplitTunnel/: Info.plist  PhantomSplitTunnel.entitlements
PhantomTests/: PhantomUIEngineTests.swift
PhantomTunnel/: DNSResolver.swift  Info.plist  NetworkSettingsManager.swift  PacketTunnelErrors.swift  PacketTunnelProvider.swift  PhantomTunnel.entitlements  PrivacyInfo.xcprivacy  WireGuardConfigBuilder.swift  WstunnelLifecycle.swift  main.swift
Tools/: Phantom-WG-MacOS.xcscheme
(+1718 files in other folders)
