[package]
name = "firewall-bridge-linux"
version = "2.0.0"
edition = "2021"
description = "Native firewall bridge — nftables and routing via netlink"

[lib]
name = "firewall_bridge_linux"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.33", features = ["bundled"] }

[profile.release]
opt-level = "s"
lto = true
strip = true